...
                  ),

                  const SizedBox(height: 20),

                  TextButton(
                    onPressed: toggleAuthMode,
                    key: const Key('toggleAuthModeButton'),
                    child: Text(
                      isLogin
                          ? "Don't have an account? Sign Up"
                          : "Already have an account? Login",
                      style: const TextStyle(
                        color: Colors.white,
...
